--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
+		<timestamp>${maven.build.timestamp}</timestamp>
 	</properties>
 
 	<dependencies>
@@ -39,6 +41,16 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
+			</plugin>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<version>2.3</version>
+			<configuration>
+				<descriptors>
+					<descriptor>src/main/assembly/sc2gears-plugin-assembly.xml</descriptor>
+				</descriptors>
+			</configuration>
 			</plugin>
 		</plugins>
 	</build>
